--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 Flask==0.11
 flask-heroku==0.1.9
 responses==0.5.1
+Flask-SQLAlchemy==2.1
+SQLAlchemy==1.0.12
+sqlalchemy-migrate==0.10.0
+psycopg2==2.6.1
 
 MarkupSafe==0.23
 Werkzeug==0.11.10
